Fix footer position on mobile screens

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -182,6 +182,9 @@ footer {
     }
 
     /* Footer */
+    footer {
+        position: fixed;
+    }
 
     #footer-content {
         margin: 0 20px;
